--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -9,6 +9,7 @@
         position: fixed;
         width: 100%;
         z-index: 999;
+        border-bottom: 3px solid black;
     }
     .header-left{
         width: 13%;
