--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -55,6 +55,7 @@
                     background: rgba(32, 72, 79, 0.1);
                      border-radius: 12px;
                 }
+           
             }
           }
           .step-two{
@@ -214,6 +215,18 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 15px;
+            transition: 0.3s ease-in-out;
+            cursor: pointer;
+            &:hover{
+                background-color: #072125;
+                i{
+                    color: #FFFFFF;
+                }
+            }
+            i{
+                color: black;
+                font-size: 20px;
+            }
         }
         h6{
             font-weight: 700;
@@ -367,7 +380,12 @@
             }
         }
     }
-
+  .btn{
+    &:hover{
+        background: #072125;
+        color: white;
+    }
+  }
 }
 // ctaS end
   
@@ -392,10 +410,17 @@
 }
 .image{
     height: 400px;
+    &:hover{
+      img{
+        transform: rotate(45deg);
+      }      
+    }
     img{
         border-radius: 6px;
         object-fit: cover;
         height: 400px;
+        cursor: pointer;
+        transition: 0.4s ease-in-out;
     }
 }
 }
@@ -473,6 +498,7 @@
        height: 700px;
        background: #FFFFFF;
        text-align: left;
+       border-radius: 6px;
      }
      .two{
         height: 700px;
@@ -508,6 +534,28 @@
         background: #20484F;
         border-radius: 8px;
         height: 700px;
+        transition: 0.3s ease-in-out;
+        &:hover{
+            background-color: #ffff;
+            h5{
+                color: #072125 !important;
+            }
+            p{
+                color: #072125;
+            }
+            ul{
+                li{
+                    a{
+                        color: #072125;
+
+                    }
+                }
+            }
+            .btn{
+                background-color: #072125 !important;
+                color: #fff !important;
+            }
+        }
         .amount{
             h5{
              color: #fff;   
@@ -527,66 +575,33 @@
             }
         }
      }
+     .one,.two,.three{
+        transition: 0.3s ease-in-out;
+        &:hover{
+            background-color: #072125;
+            h5{
+                color: #fff;
+            }
+            ul{
+                li{
+                    a{
+                        color: #fff;
+
+                    }
+                }
+            }
+            .btn{
+                background-color: #fff;
+                color: #072125;
+            }
+        }
+     }
+     
     }
 }
 // pricing end
 
-// footer start ////@
-.footer{
-    padding: 60px;
-    background: #072125;
-    .footer-top{
-        padding-bottom: 40px;
-        .left-side{
-            h2{
-                font-weight: 700;
-                font-size: 40px;
-                line-height: 50px;
-                color: #FFFFFF;        
-            }
-            .connections{
-                .feed{
-                    border-radius: 50%;
-                    width: 24px;
-                    height: 24px;
-                    z-index: 99;
-                    background: transparent;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    i{
-                        color: #FFFFFF;
-                        font-size: 20px;
-                        cursor: pointer;
-                    }
-                }
-            }
-           }
-           .right-side{
-            text-align: left;
-           h5{
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 23px;
-            text-align: left;
-            color: #FFFFFF;  
-           }
-           ul{
-            margin: 0;
-            padding: 0;
-            li{ 
-                font-weight: 400;
-                font-size: 16px;
-                line-height: 40px;
-                color:#DCF2ED;
-            }
-           }
-           }
-    }
-   
-}
 
-// end
 
 .social-prof-logos{
     background:rgba(138, 138, 138, 0.04);
